--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build and publish Python distributions to PyPI and TestPyPI
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@master
     - name: Set up Python 3.9
       uses: actions/setup-python@v1
       with:
@@ -17,6 +17,7 @@ jobs:
         python -m
         pip install
         build
+        setuptools
         --user
     - name: Build a binary wheel and a source tarball
       run: >-
@@ -27,12 +28,12 @@ jobs:
         --outdir dist/
         .
     - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@main
+      uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@main
+        uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
