--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -8,16 +8,15 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@main
-    - name: Set up Python 3.9
+    - name: Set up Python 3.8.12
       uses: actions/setup-python@v1
       with:
-        python-version: 3.9
+        python-version: 3.8.12
     - name: Install pypa/build
       run: >-
         python -m
         pip install
         build
-        setuptools
         --user
     - name: Build a binary wheel and a source tarball
       run: >-
@@ -28,12 +27,14 @@ jobs:
         --outdir dist/
         .
     - name: Publish distribution to Test PyPI
-      uses: pypa/gh-action-pypi-publish@main
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
+        user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@main
+        uses: pypa/gh-action-pypi-publish@master
         with:
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
