--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,11 +7,11 @@ jobs:
     name: Build and publish Python distributions to PyPI and TestPyPI
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@main
-    - name: Set up Python 3.8.12
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8.12'
+        python-version: '3.9'
     - run: python -m pip install build --user
     - run: python -m build --sdist --wheel --outdir dist/ .
     - name: Publish distribution to Test PyPI
