--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -21,6 +21,8 @@ jobs:
     #     pip install
     #     versiontag
     #     --user
+    - name: Tell us the tag history
+      run: git tag
     - name: Install pypa/build
       run: >-
         python -m
