--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,8 +7,7 @@ jobs:
     name: Build and publish to PyPI
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-      with: { fetch-depth: 0 }
+    - uses: actions/checkout@v1
     # - name: Fetch tag and branch history
     #   run: git fetch --prune --unshallow
     - name: Set up Python 3.9
@@ -22,7 +21,7 @@ jobs:
     #     versiontag
     #     --user
     - name: Tell us the tag history
-      run: echo foobar
+      run: git tag
     - name: Install pypa/build
       run: >-
         python -m
