--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,7 +7,8 @@ jobs:
     name: Build and publish to PyPI
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with: { fetch-depth: 0 }
     # - name: Fetch tag and branch history
     #   run: git fetch --prune --unshallow
     - name: Set up Python 3.9
@@ -21,7 +22,7 @@ jobs:
     #     versiontag
     #     --user
     - name: Tell us the tag history
-      run: git tag
+      run: git tag -l | cat
     - name: Install pypa/build
       run: >-
         python -m
