--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -14,12 +14,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    # - name: Install scm version
-    #   run: >-
-    #     python -m
-    #     pip install
-    #     versiontag
-    #     --user
+    - name: Install scm version
+      run: >-
+        python -m
+        pip install
+        versiontag
+        --user
     - name: Tell us the tag history
       run: git tag -l | cat
     - name: Install pypa/build
