--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,6 +1,10 @@
 name: Publish Python
 
-on: push
+on:
+  push:
+    tags:
+      - '*'
+
 
 jobs:
   build-n-publish:
@@ -30,6 +34,7 @@ jobs:
         --outdir dist/
         .
     - name: Publish distributiono Test PyPI
+      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
